[package]
name = "lyris"
version = "0.0.13"
edition = "2021"
description = "A real-time safe audio processing framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MoofSoup/lyris"
keywords = ["audio", "dsp", "real-time", "synthesis", "modular"]
categories = ["multimedia::audio"]
readme = "README.md"

[dependencies]
lock_freedom = "0.1.1"

[lib]
name = "lyris"

# If you want to keep docs.rs happy
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
